--- a/README
+++ b/README
@@ -7,10 +7,22 @@ Examples:
     $ psql dbname -c "COPY (`cat after.sql`) TO STDOUT WITH CSV HEADER" > after.csv
     $ diff <(sort before.csv) <(csvdrop after.csv NewColumn1 | sort)
 
-* See the total values of columns
+* See the total values of columns:
     $ csvsum file.csv Subtotal Tax Margin
     Subtotal: 1000000
     Tax: 40000
     Margin: 6000000
 
+* Make a csv look pretty:
+    $ csvtab file.csv
+    name    salary title
+    John 100000.00 Boss
+    Jim   88000.00 Peon
+    Tim   76000.00 Intern
+
+    $ csvtab file.csv -m 6
+    name salary title
+    John 100... Boss
+    Jim  880... Peon
+    Tim  760... Intern
 
